add style to h3

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Публичная страница</title>
 </head>
 <body>
-    <h1>Моя первая публичная страница!</h1>
+    <h3 style="color:blue">Моя первая публичная страница!</h3>
 </body>
 </html>
